# steward

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  .introspection.json  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  found_files.txt  latest-authority-manifest.json  plan.md  pyproject.toml
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.authority-feed-out/: latest-authority-manifest.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  post-merge.yml  publish-federation.yml  publish.yml  self-heal.yml  steward-heartbeat.yml
.steward/: .atomic_r903m386.tmp  .context_hash  context.json  conventions.md  federation_health.json  marketplace.json  memory.json  peers.json  session.json  sessions.json
.steward/skills/: add-new-tool.md  commit-and-push.md  debug-test-failure.md  fix-ci-failure.md  release-version.md
.well-known/: agent-federation.json  agent.json
bundles/8e5cad10617f31891be53be54af52e6515f12be3/: source-authority-bundle.json
campaigns/: default.json
config/personas/: steward.yaml
data/: vibe_ledger.db
data/federation/: .node_keys.json  discovered_peers.json  kirtan_ledger.json  nadi_inbox.json  nadi_inbox.tmp  nadi_outbox.json  peer.json  peers.json  receipts.json  relay_seen_ids.json  steward_health.json  verified_agents.archived.20260427_023930Z.json  verified_agents.json  verified_agents.json.tmp
deploy/: env.example  setup-node.sh  steward.service
docs/: ADR-NADI-TRANSPORT.md  AGENT_RUNTIME_DESIGN.md  API_BUDGET_ANALYSIS.md  BROWSER_INTEGRATION.md  BROWSER_INTEGRATION_DESIGN.md  CAMPAIGN_STATUS.md  DEV_WORKFLOW.md  FEATURE_STATUS.md  FEDERATION_DELEGATION_WIRING_MANIFEST_01.json  FEDERATION_DEPLOYMENT.md  FEDERATION_WIRE_STATUS.md  MILESTONE_SUPER_AGENT.md  PHASE1_BEFUND_steward.md  PHASE2_BEFUND.md  PHASE2_CURRENT.md  PR_GATE_DESIGN.md  SITUATION_REPORT.md  SYSTEM_REVIEW.md  WHAT_MAKES_AN_AGENT_ALIVE.md
docs/authority/: charter.md
scripts/: export_authority_feed.py  run_daemon.sh  setup_cron.sh  simulate_peer.py  test_two_nodes.py
scripts/needs_refinement/: federation_crawler_v8.py
specs/: CONTEXT_BRIDGE_FEATURE_00.md  CONTEXT_BRIDGE_FEATURE_01.md  CONTEXT_BRIDGE_FEATURE_04.md  CONTEXT_BRIDGE_GOVERNANCE_AMENDMENT_01.md  CONTEXT_BRIDGE_SYSTEM_SPEC.md  FEDERATION_DELEGATION_CONTRACT_V1.md  FEDERATION_DELEGATION_CONTRACT_V1_DRAFT_0_3.md  FEDERATION_DELEGATION_CONTRACT_V1_DRAFT_0_4.md  FEDERATION_DELEGATION_CONTRACT_V1_DRAFT_0_5.md  HEARTBEAT_FAILURE_PROPAGATION_FEATURE_01.md  HEARTBEAT_FAILURE_PROPAGATION_SYSTEM_SPEC.md  KAPITEL1_SPEZIFIKATION_erde.md  KAPITEL2_SPEZIFIKATION_wasser.md  KAPITEL3a_SPEZIFIKATION_dharma.md  KAPITEL3b_SPEZIFIKATION_feuer.md  PHANTOM_TTL_FIX_SPEZIFIKATION.md  PHILOSOPHISCHER SCHLUESSEL.md  STEWARD BLUEPRINT SKELETT.md
specs/context_bridge_evidence/: FEATURE_00_G1_REVIEW.md  FEATURE_01_ATTESTATION_OPERATIONS_RECON.md  FEATURE_01_G1_FINAL_REVIEW.md  FEATURE_01_G1_REVIEW.md  FEATURE_01_PUBLICATION_VECTORS.json  FEATURE_01_RUNTIME_STATE_RECON.md  FEATURE_01_SLICE_A_G2_PREFLIGHT.md  FEATURE_01_SLICE_A_PRODUCTION.md  FEATURE_01_SLICE_B_G2_PREFLIGHT.md  FEATURE_01_SLICE_B_PRODUCTION.md  FEATURE_01_SLICE_C_G2_PREFLIGHT.md  FEATURE_01_SLICE_C_PREVIEW_COMPATIBILITY.md  FEATURE_01_SLICE_C_PRODUCTION.md  FEATURE_01_SLICE_D1_PRODUCTION.md  FEATURE_01_SLICE_D2B_G2_PREFLIGHT.md  FEATURE_01_SLICE_D2B_PREFLIGHT.md  FEATURE_01_SLICE_D2B_WRITER_BOUNDARY_EVIDENCE.md  FEATURE_01_SLICE_D2B_WRITER_POLICY_PREFLIGHT.md  FEATURE_01_SLICE_D2_G2_PREFLIGHT.md  FEATURE_01_SLICE_D_G2_PREFLIGHT.md  FEATURE_01_SLICE_E_BOOTSTRAP_ISOLATION_SPEC.md  FEATURE_01_SOURCE_ADAPTER_RECON.md  FEATURE_04_G1_REVIEW.md  FEATURE_04_G2_PREFLIGHT.md  FEATURE_04_HASH_VECTORS.json  G0_FINAL_REVIEW.md  OQ01_OQ16_PUBLISHER_CALLERS.md  OQ02_CONTINUITY_PAYLOAD.md  OQ03_TASK_STATUS_CONTRACT.md  OQ04_ISSUE_SIGNAL_CONTRACT.md  OQ06_OQ14_ATOMICITY_KILL_SWITCH.md  OQ08_ROLE_IDENTITY_BOUNDARY.md  OQ09_INTERNAL_INSTRUCTION_LOADER.md  OQ10_TRACKED_ATOMIC_TEMPFILES.md  OQ11_CONSUMER_CONTRACTS.md  OQ12_OQ05_FIELDS_SEMANTICS.md  OQ13_SOURCE_FAILURE_CONTRACT.md  OQ15_CURRENT_PHASE_INTEGRITY.md  OQ17_PUBLICATION_BOUNDARY.md  OQ18_OQ07_CONSTITUTION_GOVERNANCE.md
specs/execution_truth_map/: ADR-02-ID-BOUNDARIES.md  ADR-06-FEDERATION-SIGNATURE.md  ADR-07-CAPABILITY-WIRING.md  ADR-08-RETRY-RECOVERY-IDEMPOTENZ.md  ADR-09-RECEIPT-SEMANTIK.md  ADR_BACKLOG.md  ADR_DECISION_SPRINT_1B_REVISION.md  ADR_DECISION_SPRINT_1C_REVISION.md  ADR_DECISION_SPRINT_1_REVIEW.md  (+12 more)
steward/: __init__.py  __main__.py  a2a_adapter.py  a2a_discovery.py  actuators.py  agent.py  agent_bus.py  agent_deck.py  agent_memory.py  annotations.py  autonomy.py  briefing.py  briefing_stages.py  buddhi.py  campaign_signals.py  cbr.py  cetana.py  config.py  context.py  context_bridge.py  context_contract.py  context_publication.py  context_publisher.py  context_rendering.py  federation.py  federation_crypto.py  federation_gateway.py  federation_quarantine.py  federation_relay.py  federation_transport.py  federation_v1.py  fix_pipeline.py  gaps.py  git_nadi_sync.py  healer.py  identity.py  immune.py  intent_handlers.py  intents.py  kirtan.py  (+19 more)
tests/: conftest.py  fakes.py  test_a2a_adapter.py  test_a2a_discovery.py  test_a2a_persistence.py  test_actuators.py  test_agent.py  test_agent_deck.py  test_agent_internet_proxy.py  test_agent_internet_tool.py  test_agent_memory.py  test_antahkarana.py  test_anthropic_adapter.py  test_api.py  test_attention.py  test_autonomous_flow.py  test_autonomous_healing_e2e.py  test_autonomy_heal_target.py  test_base_exception_remedy.py  test_briefing.py  test_briefing_stages.py  test_buddhi.py  test_buddy_bubble.py  test_budget_enforcement.py  test_campaign_signals.py  test_cbr.py  test_cetana.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_context.py  test_context_bridge.py  test_context_constitution.py  test_context_contract.py  test_context_management.py  test_context_publication.py  test_context_publisher.py  test_context_rendering.py  test_delegate_tool.py  test_diagnostic_sense.py  (+67 more)
(+231332 files in other folders)
