[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steward-agent"
version = "0.12.0"
description = "Steward — Autonomous Superagent Engine (Sankhya-25 Architecture)"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "kimeisele"},
]
keywords = ["ai", "agents", "autonomous", "superagent", "tool-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "steward-protocol[providers]",
]

[project.optional-dependencies]
providers = [
    "anthropic>=0.30",
]
telegram = [
    "python-telegram-bot>=22.0",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
steward = "steward.__main__:main"
steward-telegram = "steward.interfaces.telegram:main"

[project.urls]
Source = "https://github.com/kimeisele/steward"
Tracker = "https://github.com/kimeisele/steward/issues"

[tool.setuptools.packages.find]
include = ["steward*"]

# ── Test Configuration ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
asyncio_mode = "strict"
addopts = "--strict-markers"
markers = [
    "asyncio: Async tests (handled by pytest-asyncio)",
]

# ── Ruff (linting + formatting) ────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F401", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["steward", "vibe_core"]
