[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steward-agent"
dynamic = ["version"]
description = "Steward — Autonomous Superagent Engine (Sankhya-25 Architecture)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "kimeisele"},
]
keywords = ["ai", "agents", "autonomous", "superagent", "tool-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "steward-protocol[providers]",
    "rich>=13.0",
    "libcst>=1.0",
    "cryptography>=42.0",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
providers = [
    "anthropic>=0.30",
]
telegram = [
    "python-telegram-bot>=22.0",
]
search = [
    "tavily-python>=0.5",
]
api = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "pytest-asyncio>=0.23",
    "pytest-json-report>=1.5",
    "python-dotenv>=1.0",
    "ruff>=0.4",
    "bandit>=1.7",
]

[project.scripts]
steward = "steward.__main__:main"
steward-telegram = "steward.interfaces.telegram:main"
steward-api = "steward.interfaces.api:main"

[project.urls]
Homepage = "https://github.com/kimeisele/steward"
Repository = "https://github.com/kimeisele/steward"
Issues = "https://github.com/kimeisele/steward/issues"
Changelog = "https://github.com/kimeisele/steward/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "steward.__version__"}

[tool.setuptools.packages.find]
include = ["steward*"]

[tool.setuptools.package-data]
steward = ["py.typed"]

# ── Test Configuration ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
asyncio_mode = "strict"
addopts = "--strict-markers"
markers = [
    "asyncio: Async tests (handled by pytest-asyncio)",
]

# ── Ruff (linting + formatting) ────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["steward", "vibe_core"]

# ── Bandit (security scanning) ────────────────────────────────────
[tool.bandit]
skips = [
    "B101",   # assert usage — fine in non-production code
    "B104",   # hardcoded 0.0.0.0 bind — intentional for API server, host is configurable via env
    "B110",   # try/except/pass — intentional in HTTP error body read (already handled above)
    "B404",   # import subprocess — we need it
    "B603",   # subprocess without shell=True — that's the safe way
    "B607",   # partial executable path — we call git/ruff/bandit by name
    "B108",   # hardcoded /tmp — used in tests only
    "B310",   # urllib.urlopen — used for HTTP tools with validated URLs
]
